syntax = "proto3";

package protos.activeuser;
option go_package = "protos";


service ActiveUser {
    rpc activeOr (ActiveUserRequest) returns (ActiveUserResponse);
}


message ActiveUserRequest {
    repeated string accounts = 1;
    string adminAccount = 2;
    string adminUserId = 3;
    bool active = 4;
    string device = 5;
}

message ActiveUserResponse {
    string message = 1;//状态消息
    int32 code = 2;//状态码
    int32 status = 3;// 请求状态 0失败，1成功
}